# AI_Study

OpenAI_API/: 01_chat_completions.py  02_completions.py  06_audio_transcriptions.py  07_audio_translations.py  08_audio_speech.py  09_files.py  10_assistants.py  11_threads.py  12_thread_messages.py  14_models.py  17_batch.py  18_responses.py  README.md
langchain_demo/: 01_chat_models.py  02_prompts.py  03_output_parsers.py  04_chains.py  05_rag.py  06_agents.py  07_memory.py  08_embeddings.py  09_tools.py  README.md  config.py  langchain_agent.md  pyproject.toml
openai_demo/: 01_chat_completions.py  02_completions.py  03_embeddings.py  04_images_generate.py  05_images_edit.py  06_audio_transcriptions.py  07_audio_translations.py  08_audio_speech.py  09_files.py  10_assistants.py  11_threads.py  12_thread_messages.py  13_runs.py  14_models.py  15_moderations.py  16_fine_tuning.py  17_batch.py  18_responses.py  config.py
