[project]
name = "langchain_demo"
version = "0.1.0"
description = "LangChain API 使用示例"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "pydantic>=2.0.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0",
]
